crates/plotnik-lib/tests/04-emit/linking/supertype_refinement_overlapping.txt
Q = (expression#pattern)
==== diagnostics ====
error: supertype matching is written `expression#`, but it is not supported yet
 --> query.ptk:1:6
  |
1 | Q = (expression#pattern)
  |      ^^^^^^^^^^
  |
help: match the concrete subtypes with an alternation, e.g. `[(a) (b)]`
help: subtypes of `expression`: `assignment_expression`, `augmented_assignment_expression`, `await_expression`, `binary_expression`, `jsx_element`, `jsx_self_closing_element`, `new_expression`, `primary_expression`, ... (4 more)
